# expenses_agent

./: .env.example  .gitignore  .pylintrc  pyproject.toml
src/expenses_agent/: __init__.py
src/expenses_agent/assistant/: schemas.py
src/expenses_agent/models/: database.py  models.py  workflow.py
tests/: test_model.py
